smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/version/version-set-more-than-once.smithy
// Parse error at line 3, column 11 near `"2`: Duplicate control statement `version`
$version: "2"
$version: "2"
